--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 13 12:31:10 EET 2022
-sdk.dir=/Users/Mostafa Kamal/Library/Android/sdk
+#Wed Feb 01 19:35:42 EET 2023
+sdk.dir=/Users/ameenessa/Documents/Development/AndroidSDK
