--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 01 21:44:57 EET 2023
-sdk.dir=/Users/Mostafa Kamal/Library/Android/sdk
+#Thu Feb 02 20:12:42 EET 2023
+sdk.dir=/Users/ameenessa/Documents/Development/AndroidSDK
